# pbshax

./: .gitignore  README.md  makeregions  pbsparallel  pyproject.toml  regionparallel  setup.cfg
pbshax/: __init__.py  main.py  parallel.py  regions.py
pbsparallel/: __init__.py
