[metadata]
name = pbshax
author = Dr. K. D. Murray
author_email = foss@kdmurray.id.au
description = Tools to assist with bioinformatics on PBS clusters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kdm9/pbshax
project_urls =
    Bug Tracker = https://github.com/kdm9/pbshax/issues
    Source = https://github.com/kdm9/pbshax
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Unix Shell
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = pbshax
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm

[bdist_wheel]
universal=1

[options.entry_points]
console_scripts =
    pbsparallel = pbshax.main:pbsparallel
    regionparallel = pbshax.main:regionparallel
    makeregions = pbshax.main:makeregions
